# 10-Acadamy-tenx-week0

./: .coverage  .pre-commit-config.yaml  README.md  prompt_play_ground.md  pyproject.toml
.github/: copilot-instructions.md
scripts/: check_no_any.py
